--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 html {
     user-select: none;
 }
-
+*::-webkit-scrollbar {
+    display: none;
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
